# SpectrAccess

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  live-smoke.yml  publish.yml
scripts/: live_smoke.py
src/spectraccess/: __init__.py
src/spectraccess/connectors/: __init__.py  thredds.py
src/spectraccess/connectors/aeronet/: DATA_TERMS.md  __init__.py  connector.py
src/spectraccess/connectors/cams/: DATA_TERMS.md  __init__.py  connector.py
src/spectraccess/connectors/emit_earthaccess/: DATA_TERMS.md  __init__.py  connector.py
src/spectraccess/connectors/gsics/: DATA_TERMS.md  __init__.py  connector.py
src/spectraccess/connectors/landsat_eodag/: DATA_TERMS.md  __init__.py  connector.py
src/spectraccess/connectors/modis_viirs_cal/: DATA_TERMS.md  __init__.py  connector.py
src/spectraccess/connectors/radcalnet/: DATA_TERMS.md  __init__.py  connector.py
src/spectraccess/connectors/sentinel2_cdse/: DATA_TERMS.md  __init__.py  connector.py
src/spectraccess/core/: __init__.py  connector.py  fetch.py  schema.py  session.py
tests/: test_cams.py  test_connectors.py  test_core.py  test_emit_earthaccess.py  test_landsat_eodag.py  test_schema.py  test_sentinel2_cdse.py  test_thredds.py
tests/fixtures/: README.md  gsics_coefficients.csv  gsics_msg4_seviri_metopb_iasi_nrtc_20260704.nc  radcalnet_daily.csv  viirs_factors.csv
tests/fixtures/aeronet/: Granada_2024_06_15_L2.0.csv  Ispra_2024_07_15_L2.0.csv
tests/fixtures/radcalnet/: GSCN01_2025_334_v04.05.output
tests/fixtures/sentinel2_cdse/: S2B_T31UFT_20240501_feature.json
