[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectraccess"
version = "0.1.0"
description = "Python clients for hard-to-reach spectral reference data portals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "SpectraWorks B.V." }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
  "xarray>=2023.1",
  # netCDF-3-classic backend for xarray: GSICS operational GPPA products are
  # CDF classic (not HDF5-based netCDF4), and scipy is the lightest maintained
  # engine that reads that format without pulling in the netCDF4 C library.
  "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/SpectraWorksOSS/SpectrAccess"
Repository = "https://github.com/SpectraWorksOSS/SpectrAccess"
Issues = "https://github.com/SpectraWorksOSS/SpectrAccess/issues"

[project.optional-dependencies]
# Reserved for a future opt-in RefCal uncertainty-provider integration.
refcal = []
cdse = [
  "cdsetool>=0.3.1,<0.4",
]
emit = [
  "earthaccess>=0.18,<1",
]
landsat = [
  "eodag[usgs]>=4.3,<5",
]
test = [
  "pytest>=8",
  "requests-mock>=1.11",
  # Exercise the real maintained-client adapter in fixture tests. Runtime
  # users who need this connector install spectraccess[cdse].
  "cdsetool>=0.3.1,<0.4",
  "earthaccess>=0.18,<1",
  "eodag[usgs]>=4.3,<5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

